--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
+    "react-navigation-material-bottom-tabs": "^2.2.2",
     "react-navigation-stack": "^2.0.1",
     "react-switch": "^5.0.1",
     "toggle-switch-react-native": "^2.1.0"
