--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.5",
     "@twotalltotems/react-native-otp-input": "^1.2.1",
+    "axios": "^0.19.2",
     "cli": "^1.0.1",
     "expo": "^36.0.2",
     "native-base": "^2.13.8",
+    "rc-swipeout": "^2.0.11",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -26,6 +28,7 @@
     "react-native-safe-area-context": "^0.6.2",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-swipeout": "^2.3.6",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
